--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
 VITE_GRAPHQL_ENDPOINT=http://localhost:5000/graphql
+
+VITE_STRIPE_TEST_PUBLISHABLE_KEY=pk_test_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+VITE_STRIPE_LIVE_PUBLISHABLE_KEY=pk_live_xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
